Bulk insert ads into elasticsearch index